# pa-trace

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
cases/: README.md  case_01.json  case_02.json  case_03.json  case_04.json  case_05.json  case_06.json  case_07.json  case_08.json  case_09.json  case_10.json  gold_labels.json
docs/slides/: 1-intro.md  transcript_tts.md
pa_trace/: assemble.py  checklist.py  cli.py  eval.py  extraction_baseline.py  extraction_llm.py  pipeline.py  policy_store.py  prompt_template.py  retrieval.py
pa_trace/templates/: highlights.html.j2
policies/: README.md  policy_demo_spine_mri.json
