[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pa-trace"
version = "0.1.0"
description = "UI-less hackathon MVP for evidence-traced prior auth packet drafting"
requires-python = ">=3.9"
dependencies = [
    "llama-cpp-python>=0.3.0,<0.4.0",
    "huggingface_hub>=1.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
pa-trace = "pa_trace.cli:main"

[tool.setuptools.packages.find]
include = ["pa_trace*"]
